--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">Mobile app A</string>
-    <string name="text">Yuma</string>
+    <string name="text">未登録</string>
 </resources>
